# rustdok-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/openapiv3/: openapi.yaml  redoc.html
docs/rustdok_server/: all.html  fn.main.html  index.html  sidebar-items.js
docs/rustdok_server/api/: index.html  sidebar-items.js
docs/rustdok_server/api/config/: fn.configure_api_v1.html  index.html  sidebar-items.js
docs/rustdok_server/api/health/: index.html  sidebar-items.js  struct.liveness.html  struct.readiness.html
docs/rustdok_server/api/v1/: index.html  sidebar-items.js
docs/rustdok_server/models/: index.html
docs/rustdok_server/models/s3/: index.html  sidebar-items.js  struct.CreateBucketRequest.html  struct.CreateFolderRequest.html
docs/rustdok_server/rdlib/: index.html  sidebar-items.js
docs/rustdok_server/rdlib/s3/: index.html  sidebar-items.js
docs/search.desc/rustdok_server/: rustdok_server-desc-0-.js
docs/src/rustdok_server/: api.rs.html  main.rs.html  models.rs.html  rdlib.rs.html
docs/src/rustdok_server/api/: config.rs.html  health.rs.html  v1.rs.html
src/: api.rs  main.rs  models.rs  rdlib.rs  tests.rs
src/api/: config.rs  health.rs  v1.rs
src/api/v1/: buckets.rs  objects.rs
src/models/: s3.rs
src/rdlib/: s3.rs
src/rdlib/s3/: bucket.rs  error.rs  object.rs  service.rs  types.rs
src/tests/: api.rs  s3.rs
src/tests/api/: v1.rs
src/tests/s3/: bucket.rs  object.rs  service_test_helpers.rs  service_tests.rs
(+91 files in other folders)
