[package]
name = "rustdok-server"
version = "0.1.0"
edition = "2024"

[features]
testing = []

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.15.1", features = ["v4"] }
env_logger = "0.11.6"
log = "0.4.26"
futures = "0.3.31"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
dotenv = "0.15"
chrono = "0.4.40"
actix-cors = "0.7.0"
aws-sdk-s3 = "1.78.0"
aws-config = "1.5.18"
aws-types = "1.3.5"
sanitize-filename = "0.6.0"
mime_guess = "2.0.5"
async-trait = "0.1.87"
bytes = "1.10.1"
once_cell = "1.21.1"

[dev-dependencies]
mockall = "0.13.1"
regex = "1.11.1" 